--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -42,7 +42,7 @@ Because of this,
 the authors of the~\gls{de-anon paper} developed heuristics to tell whether we link a given validator with a given node~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
 The heuristics and their application are described in~\autoref{subsec:setup}.
 
-Assuming that we will be able to de-anonymize validators, we can take advantage of the fact that an Ethereum node always needs to include its~\gls{ENR} when sending messages over the network. 
+Assuming that we will be able to de-anonymize validators, we can take advantage of the fact that an Ethereum node always needs to include its~\gls{enr} when sending messages over the network.
 As explained in~\autoref{subsec:enr}, the node IP is always included in the~\gls{enr}, which this attack takes advantage of.
 
 \subsubsection{Finding proposer duties for a Proposer DoS attack}
