--- a/report/src/sections/06-discussion.tex
+++ b/report/src/sections/06-discussion.tex
@@ -63,5 +63,5 @@ While comparing the results from the original paper to our results, we see that 
 In the original paper, the amount of validators on each peer tops out at a little over 1000 validators per peer.
 Our finding however, shows that the amount of validators on each could reach up to 87028 validators per peer.
 One of the explanations for this could be that the testnet has a higher density of validators compared to the mainnet since it is easier to become a validator on the testnet due to money not being a problem.
-
-
+In the original paper they also state that 27\% of the peers they connected to had only one validator.
+Opposite to this, we found that only 7\% of the peers we connected to had just one validator.
