--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -8,7 +8,7 @@ We also describe the setup of the experiment that will be conducted as well as t
 The attack that we are describing is divided in two parts.
 The overall goal of the attack is
 to be able
-to withhold Ethereum validators from performing their eventual proposer duties
+to withhold validators from performing their eventual proposer duties
 as mentioned in~\cite{EthereumAttackDefense2024}.
 The idea is that the adversary would interrupt validators using a~\gls{dos} attack.
 For this, we need information regarding two things;
