--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -34,7 +34,7 @@ we would couple the validator, associated with the non-backbone attestation, to 
 
 Though, there are a lot of things that are uncertain when sending messages over the internet.
 It may be that we never receive a message because of network instability.
-As stated by~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, nodes can also run in non-default configurations,
+As stated by~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, nodes can also run non-default configurations,
 i.e.,\ subscribing to more than two subnets, increasing the number of messages one will receive from that node.
 We may also wrongly label messages as backbone or non-backbone because of lack of or delayed information regarding a node's backbone subnets.
 
