--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -39,7 +39,7 @@ i.e.,\ subscribing to more than two subnets, increasing the number of messages o
 We may also wrongly label messages as backbone or non-backbone because of lack of or delayed information regarding a node's backbone subnets.
 
 Because of this,
-the authors of the~\gls{de-anon paper} developed heuristics to tell whether we link a given validator with a given node~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
+the authors of the~\gls{de-anon paper} developed heuristics to tell if a given validator could be linked with a given node~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
 The heuristics and their application are described in~\autoref{subsec:setup}.
 
 Assuming that we will be able to de-anonymize validators, we can take advantage of the fact that an Ethereum node always needs to include its~\gls{enr} when sending messages over the network.
