--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -177,7 +177,7 @@ Prysm is also one of the most used clients for connecting with the consensus lay
 The Prysm node is modified to subscribe to all 64 subnets in the network, which enables it to receive as many attestations as possible.
 Adding to that, and also aiming for experimental consistency with the~\gls{de-anon paper}, we allow our node to connect to up to 1,000 peers.
 
-It is important to notice that the node does not do anything which stands out from normal consensus node behavior.
+Apart from that, our node performs tasks as any other node in Ethereum would.
 The only change is that we log the data as explained in~\autoref{subsec:attack-implementation}.
 
 Aiming to log as much data as possible while trying to get as many connections as possible requires a lot of computational resources.
