--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -48,7 +48,7 @@ Here we can see that 57\% of the peers that we connected to have at least one va
 The amount of validators on each peer ranges from 0 to 87028, with the average being 1003 validators per peer.
 We see that the most common amount of validators on a peer is 1 with about 7\% of the found peers having only one validator.
 We also saw that having 110 and 400 were the most common amounts of validators on a peer once we get above 20 validators on a peer.
-And we found a total of 24 peers that had 10,000 or more validators on them.
+We found a total of 24 peers that had 10,000 or more validators on them.
 \begin{figure*}[!ht]
     \includegraphics[width=\linewidth]{figures/distval}
     \caption{The cdf showing the distribution of validators on each peer}
