--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -2,7 +2,8 @@
 
 \subsection{Connected peers}\label{subsec:connected-peers}
 \begin{figure*}[!ht]
-    \includegraphics[width=\linewidth]{figures/conPeer2}
+    \centering
+    \includegraphics[scale = 0.5]{figures/conPeer2}
     \caption{The number of peers our node was connected to over the time of the experiment.
     Data points are collected every minute and the average amount of peers connected is 148.}
     \label{fig:peersconnected}
@@ -43,15 +44,7 @@ This pattern would repeat, but after the first drop it would then drop consisten
     \label{tab:unique vals}
 \end{table}
 
-
-
-Deanonymized validators = 493,551
-
 IPs collected = 1183
-
-Average connected = 148
-
-Nodes with validators = 513
 
 \subsection{Validator Distribution}\label{subsec:validator-distribution}
 From all the peers we were connected to, we collected the number of validators on each peer.
@@ -62,7 +55,8 @@ We see that the most common amount of validators on a peer is 1 with about 7\% o
 We also saw that having 110 and 400 were the most common amounts of validators on a peer once we get above 20 validators on a peer.
 We found a total of 24 peers that had 10,000 or more validators on them.
 \begin{figure*}[!ht]
-    \includegraphics[width=\linewidth]{figures/distval}
+    \centering
+    \includegraphics[scale = 0.5]{figures/distval}
     \caption{The cdf showing the distribution of validators on each peer}
     \label{fig:validatorsonpeers}
 \end{figure*}
