--- a/report/src/sections/08-future-works.tex
+++ b/report/src/sections/08-future-works.tex
@@ -47,7 +47,7 @@ This would also increase the threshold for entry in the system for validators as
 
 
 \subsection{Further research}\label{subsec:further-research}
-Due to time constraints, we were able to fully reproduce the attack mentioned in~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
+Due to time constraints, we were not able to fully reproduce the attack mentioned in~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
 In the original paper, they run treir experiment on the mainnet, while we ran our experiment on a testnet.
 This means that the results of the two experiments could differ due to the differences in the two networks.
 With more time, it would be interesting to run our experiment on the mainnet to see if the results would more closely align with the original paper.
