--- a/report/src/sections/08-future-works.tex
+++ b/report/src/sections/08-future-works.tex
@@ -54,6 +54,6 @@ With more time, it would be interesting to run our experiment on the mainnet to 
 
 
 Another place to look for further research would be to implement the~\gls{dos} attack as a follow-up to this paper.
-Since this paper mainly focuses on the data collection part of the attack, it would be interesting to see how the~\gls{dos} attack would use the data collected to stop a proposer from proposing a block.
+Since this paper mainly focuses on the data collection part of the attack, it would be interesting to see the consequences of the~\gls{dos} attack trying to stop a proposer from proposing a block using the data collected.
 We can see a clear use case for the data collected in the~\gls{dos} attack, and it is clear that this is a possible attack vector that could be used to obstruct the proposer from proposing a block and gain the rewards that come with it.
 This however would need to be tested on a local testnet since unlike the data collection part of the attack, the~\gls{dos} attack would have a negative impact on the network and cause a loss of ether for the validators that are being attacked if successful.
