--- a/report/src/sections/01-introduction.tex
+++ b/report/src/sections/01-introduction.tex
@@ -24,6 +24,16 @@ This has lead os to make the following contributions:
     \item We have documented our results of the de-anonymization attack and compared those against the results from the original authors of the attack~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}
     \item We discuss the incentives and consequences that arise after a successful execution of the~\gls{dos} attack on block proposers.
 \end{itemize}
-\
 
+\subsection{related work}\label{subsec:related-work}
+The usage of~\glspl{zkp} in Ethereum is not a new concept.
+In fact, it currently uses them both on- and off-chain.
+The following provides a short overview of some of the already existing solutions as well as one still being in development.
+
+
+\subsubsection{DoS Attack}\label{subsubsec:dos-attack}
+Some of the instances of~\gls{dos} attacks that are seen on ethereum ranges from attacks on the proposers to attacks that seek to slow down the network itself.
+A known attack aims to slow down the network by using underpriced opcodes to create a block that is hard to process~\cite{10.1145/3391195,9815256}.
+Another way to slow down the network is to create empty accounts that are hard to process~\cite{empty-account-mitigation,empty-account-eip-mitigation}.
+This attack, however, is outdated and has been mitigated by making it near impossible to create empty accounts in the network.
 
