--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -218,34 +218,4 @@ the subnet that the peer was in and the public key associated with the attestati
 The data that was logged was then stored in a database for further analysis.
 After this,
 the peers were sorted into the same four categories
-as mentioned in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
-The categories are:
-\begin{itemize}
-    \item Deanonymized
-    \item No validators
-    \item 64 subnets
-    \item Rest
-\end{itemize}
-
-\textbf{Deanonymized:} One or more validators have been discovered on this peer.
-
-\textbf{No validators:} No validators have been discovered on this node, as we did not receive a non-backbone attestation.
-
-\textbf{64 subnets:} The peer was subscribed to all 64 subnets,
-so we are not able to tell backbone attestations from non-backbone attestations.
-
-\textbf{Rest:} Peers where we receive non-backbone attestations, but we were not able to identify any validators.
-
-When it comes to deanonymizing the validators,
-we used the same heuristic as in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
-The heuristic includes four criteria being:
-\begin{itemize}
-    \item The proportion of non-backbone attestations for validator v exceed
-    \begin{equation}
-        0.9*\left(\frac{64-n_{sub}(p)}{64}\right)
-        \label{eq:heurestic}
-    \end{equation} where nsub(p) is the average number of subnets the peer is subscribed over the connection’s duration.
-    \item The peer is not subscribed to all 64 subnets.
-    \item TWe receive at least every tenth attestation we expect for the validator v from the peer.
-    \item The number of attestations we receive for the validator v from the peer p exceeds the mean number of attestations per validator from peer p by two standard deviations.
-\end{itemize}
+as mentioned in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, also mentioned in~\autoref{subsec:inspirational-papers}.
