--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -23,6 +23,7 @@
     \input{sections/06-discussion}
     \input{sections/07-conclusion}
     \input{sections/08-future-works}
+    \input{sections/09-Acknowledgements}
 
     \clearpage
     %\printglossary[type=\acronymtype]
