changed autoref for subsection and subsubsection

--- a/report/src/setup/preamble.tex
+++ b/report/src/setup/preamble.tex
@@ -18,6 +18,8 @@
 
 % Packages with options set
 \usepackage[hidelinks]{hyperref}
+\renewcommand{\subsubsectionautorefname}{section}
+\renewcommand{\subsectionautorefname}{section}
 \usepackage[textsize=small,obeyDraft]{todonotes}
 \usepackage[newfloat,outputdir=../out]{minted}
 \usepackage[backend=biber,
