--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -217,5 +217,4 @@ the subnet that the peer was in and the public key associated with the attestati
 \todo {mabye add image of tableheaders here for vizualization}
 The data that was logged was then stored in a database for further analysis.
 After this,
-the peers were sorted into the same four categories
-as mentioned in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, also mentioned in~\autoref{subsec:inspirational-papers}.
+the peers were sorted into the same four categories mentioned in~\autoref{subsec:inspirational-papers}, originally developed in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
