--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -15,7 +15,7 @@ Over the course of the experiment, the number of connected peers fluctuated a lo
 Then it would heavily drop and rise again.
 This pattern would repeat, but after the first drop it would then drop consistently every 7 hours instead.
 
-\subsection{De-anonymization}\label{subsec:deanonymization}
+\subsection{De-anonymization}\label{subsec:de-anonymization}
 Durring the attack we discovered a total of 1,195 unique peers.
 The results of the de-anonymization attack are shown in~\autoref{tab:distribution}.
 The table showcases the distribution of nodes into the four different categories based on the heuristic described in~\autoref{subsec:inspirational-papers}.
