--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -28,7 +28,7 @@ This is done by using the \gls{lmd-ghost}~\cite{EthereumProof-of-stakePoS} algor
 
 \subsection{Subnets}\label{subsec:subnets}
 The Ethereum network is split up into smaller networks called subnets.
-The nodes in the network are split into a total of 64 subnets and an additional subnet for attestation aggregates with each node subscribing to at least two subnets.
+The nodes in the network are split into a total of 64 subnets and an additional subnet for attestation aggregates with each node subscribing to two subnets by default.
 Being subscribed to a subnet is also referred to as being backbone of a subnet.
 
 These subnets are used to help with the scalability of the network by distributing the load of messages.
