--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -32,7 +32,7 @@ The nodes in the network are split into a total of 64 subnets and an additional 
 Being subscribed to a subnet is also referred to as being backbone of a subnet.
 
 These subnets are used to help with the scalability of the network by distributing the load of messages.
-Most often, messages are sent between nodes in the same subnet.
+Most messages are sent between nodes in the same subnet.
 This lessens the load of a node, as it will receive $\frac{2}{64}$ of all messages in the blockchain instead of all messages.
 
 
