--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -49,7 +49,7 @@ The overall purpose of this message is to make sure that validators agree on the
 An attestation is sent by its author to only a single subnet.
 Afterwards, it will naturally be broadcasted to other parts of the network by peers in that subnet
 
-A single validator is assigned by the protocol to a single slot each epoch, where they must publish their attestation.
+A single validator is assigned by the blockchain protocol to a single slot each epoch, where they must publish their attestation.
 In this attestation, the validator among other things votes for what it sees as the \textit{source} and \textit{target}.
 
 The source is what the validator sees as being the most recent justified block.
