--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -1,12 +1,12 @@
 
 
 \section{Experimental protocol}\label{sec:experimental-protocol}
-In this section we will cover the workings of the attack that will be performed.
+In this section we will cover the motivation and the workings of the attack that will be performed.
 We also describe the setup of the experiment that will be conducted as well as the experiment itself.
 
 \subsection{Motivation}\label{subsec:proposer-dos-attack}
 \subsubsection{Proposer DoS Attack}
-In this subsection, we will be describing the attack that we will be using as a basis for our experiment in~\autoref{sec:experimental-protocol}.
+In this section, we will be describing the attack that we will be using as a basis for our experiment in~\autoref{sec:experimental-protocol}.
 The attack is a~\gls{dos} attack that aims at hitting the proposers selected for creating blocks in the chain.
 Ethereum themselves have mentioned it as a potential attack, and with the current implementation of the consensus algorithm, it seems that this attack is possible to perform~\cite{EthereumSSLE2024,EthereumAttackDefense2024}.
 
@@ -69,19 +69,17 @@ Therefore, the adversary potentially gains a greater reward from including those
 that are now available because of the attack.
 
 \subsection{Attack description}\label{subsec:attack-description}
-The attack that we are describing is divided in two parts.
-The overall goal of the attack is
-to be able
-to withhold validators from performing their eventual proposer duties
-as mentioned in~\cite{EthereumAttackDefense2024}.
+The overall goal of the attack is to be able to withhold validators from performing their eventual proposer duties as mentioned in~\cite{EthereumAttackDefense2024}.
 The idea is that the adversary would interrupt validators using a~\gls{dos} attack.
-For this, we need information regarding two things;
-when a specific validator is going to produce a block, and what the IP address of the validator is.
+The attack is divided in two parts.
+First being that we need information regarding two things; when a specific validator is going to produce a block, and what the IP address of the validator is.
+This part of the attack will be explored below.
+The second part of the attack is to perform the~\gls{dos} attack on the de-anonymized validators.
 
 \subsubsection{Getting validator IPs}
 When a node is a part of the Ethereum network,
-it will receive messages in the form of attestations from other nodes in the network.
-These attestations can be split into two different categories, backbone and non-backbone attestations.
+it receives messages in the form of attestations from other nodes in the network.
+These attestations are split into two different categories, backbone and non-backbone attestations.
 A backbone attestation is typically a routine message sent between peers in the same subnet.
 This means that the nodes are simply forwarding messages to each other that they did not construct themselves.
 To explain non-backbone attestations,
@@ -89,28 +87,28 @@ we refer directly to the observation found in ~\cite{heimbach2024deanonymizinget
 \\\\
 \textit{\textbf{Observation 1.} An ideal peer will only send us an attestation in a subnet they are not a backbone of
 if they are the signer of the attestation,
-    and we are in their fanout for the corresponding subnet of the attestation.}
+     and we are in their fanout for the corresponding subnet of the attestation.}
 \\\\
 
-So optimally, all non-backbone attestations that we receive should have been constructed by the node that sent it to us.
+So optimally, all non-backbone attestations that our node receives should be constructed by the node that sent it to us.
 Therefore, in a perfect scenario,
 we would couple the validator, associated with the non-backbone attestation, to the peer that sent the message.
 
-Though, there are a lot of things that are uncertain when sending messages over the internet.
+Though, there is a lot of things that are uncertain when sending messages over the internet.
 It may be that we never receive a message because of network instability.
 As stated by~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, nodes can also run non-default configurations,
 i.e.,\ subscribing to more than two subnets, increasing the number of messages one will receive from that node.
-We may also wrongly label messages as backbone or non-backbone because of lack of or delayed information regarding a node's backbone subnets.
+We may also wrongly label messages as backbone or non-backbone because of a lack of or delayed information regarding a node's backbone subnets.
 
 Because of this,
-the authors of the~\gls{de-anon paper} developed heuristics to tell if a given validator could be linked with a given node~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
-The heuristics and their application are described in~\autoref{subsec:setup}.
+the authors of the~\gls{de-anon paper} developed a heuristic to tell if a given validator could be linked with a given node~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
+The heuristic and their application are described in~\autoref{subsec:inspirational-papers}.
 
 Assuming that we will be able to de-anonymize validators, we can take advantage of the fact that an Ethereum node always needs to include its~\gls{enr} when sending messages over the network.
 As explained in~\autoref{subsec:enr}, the node IP is always included in the~\gls{enr}, which this attack takes advantage of.
 
 \subsubsection{Finding proposer duties for a Proposer DoS attack}
-Applying the aforementioned heuristics to the logged data will enable us to get a list of de-anonymized validators in which the IP addresses of the nodes are included because of the~\glspl{enr}.
+Applying the aforementioned heuristic to the logged data will enable us to get a list of de-anonymized validators in which the IP addresses of the nodes are included because of the~\glspl{enr}.
 Now that we should have linked validators with IP addresses, we need to find out which validators are going to propose upcoming blocks in the blockchain.
 
 Having de-anonymized validators means that the~\gls{randao} proposer selection is vulnerable,
@@ -134,21 +132,23 @@ Included in the de-anonymization is the IP-addresses of the validator as well as
 So having matched the upcoming proposers with de-anonymized validators,
 an adversary now ideally knows the IP-addresses of several upcoming proposers.
 
-This allows for the adversary to DoS the specific IP-address,
+This allows for the adversary to~\gls{dos} the specific IP-address,
 which could leave the proposer inactive at their designated slot.
 
 \subsection{DoS attack implementation}\label{subsec:attack-implementation}
-As mentioned in~\autoref{subsec:setup},
 the work in this paper revolves around modifying a fork of the Prysm consensus client.
-An important thing to keep in mind is that the core functionality of Prysm is never changed.
-So no changes have been made to variables already being used in the Prysm client.
 
-Instead, to be able to implement the attack,
+To be able to implement the attack,
 it is a case of finding where the different functionalities are written in the code.
 It is enough to modify just two classes in the code to reach a point where the attack is possible.
-
-As mentioned in~\autoref{subsec:setup} two entities are logged, peers and attestations.
+Two entities are logged, peers and attestations.
 This translates almost directly to the code in the Prysm client, as each of these can be handled by a class each.
+
+It is also an important thing to keep in mind is that the core functionality of Prysm is never changed.
+So no changes have been made to variables already being used in the Prysm client.
+
+
+
 
 \subsubsection{Peers}\label{subsubsec:peers}
 The logs of the attestations share similarities with the logs of the peers, so the peers will be described first.
@@ -187,18 +187,18 @@ After collection all the information available for an attestation,
 the data is logged to a database as in~\autoref{subsubsec:peers}.
 
 \subsection{Setup}\label{subsec:setup}
-The primary goal of the experiment is to log as much data from attestations and peers as possible.
-To do this, we modify the implementation of the Prysm consensus client~\cite{prysm}.
+For the attack, we modify the implementation of the Prysm consensus client~\cite{prysm}.
 Prysm is also one of the most used clients for connecting with the consensus layer~\cite{client-diversity}.
 The Prysm node is modified to subscribe to all 64 subnets in the network, which enables it to receive as many attestations as possible.
 Adding to that, and also aiming for experimental consistency with the~\gls{de-anon paper}, we allow our node to connect to up to 1,000 peers.
 
-Apart from that, our node performs tasks as any other node in Ethereum would.
 The only change is that we log the data as explained in~\autoref{subsec:attack-implementation}.
+Apart from that, our node performs tasks as any other node in Ethereum would.
+
 
 Aiming to log as much data as possible while trying to get as many connections as possible requires a lot of computational resources.
 Our instance of the modified Prysm node was running in cooperation with a Go-Ethereum execution client.
-The client was then run on a virtual machine hosted on Strato Claaudia through Aalborg University.
+The client was then run on a virtual machine hosted on Strato CLAAUDIA through Aalborg University.
 The virtual machine had 16 virtual CPUs as well as 64 GB of RAM available.
 The physical location of the virtual machine is in Denmark.
 
@@ -214,7 +214,6 @@ While the client was running,
 it was able to log information from the received attestations as well as on the peers it discovered.
 Among other things, the client logged peer~\glspl{enr}, the subnets that the attestations were sent to,
 the subnet that the peer was in and the public key associated with the attestation.
-\todo {mabye add image of tableheaders here for vizualization}
 The data that was logged was then stored in a database for further analysis.
 After this,
 the peers were sorted into the same four categories mentioned in~\autoref{subsec:inspirational-papers}, originally developed in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
