--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -6,7 +6,7 @@ We also describe the setup of the experiment that will be conducted as well as t
 
 \subsection{Motivation}\label{subsec:proposer-dos-attack}
 \subsubsection{Proposer DoS Attack}
-In this section, we will be describing the attack that we will be using as a basis for our experiment in~\autoref{sec:experimental-protocol}.
+In this section, we will be describing the attack that acts as motivation for doing our experiment.
 The attack is a~\gls{dos} attack that aims at hitting the proposers selected for creating blocks in the chain.
 Ethereum themselves have mentioned it as a potential attack, and with the current implementation of the consensus algorithm, it seems that this attack is possible to perform~\cite{EthereumSSLE2024,EthereumAttackDefense2024}.
 
