--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -72,7 +72,7 @@ that are now available because of the attack.
 The overall goal of the attack is to be able to withhold validators from performing their eventual proposer duties as mentioned in~\cite{EthereumAttackDefense2024}.
 The idea is that the adversary would interrupt validators using a~\gls{dos} attack.
 The attack is divided in two parts.
-First being that we need information regarding two things; when a specific validator is going to produce a block, and what the IP address of the validator is.
+First we need to know validator IP addresses, found by de-anonymizing the validators.
 This part of the attack will be explored below.
 The second part of the attack is to perform the~\gls{dos} attack on the de-anonymized validators.
 
