--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -95,7 +95,7 @@ So optimally, all non-backbone attestations that our node receives should be con
 Therefore, in a perfect scenario,
 we would couple the validator, associated with the non-backbone attestation, to the peer that sent the message.
 
-Though, there is a lot of things that are uncertain when sending messages over the internet.
+Though, there are a lot of things that are uncertain when sending messages over the internet.
 It may be that we never receive a message because of network instability.
 As stated by~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, nodes can also run non-default configurations,
 i.e.,\ subscribing to more than two subnets, increasing the number of messages one will receive from that node.
