--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -145,7 +145,7 @@ It is enough to modify just two classes in the code to reach a point where the a
 Two entities are logged, peers and attestations.
 This translates almost directly to the code in the Prysm client, as each of these can be handled by a class each.
 
-It is also an important thing to keep in mind is that the core functionality of Prysm is never changed.
+It is also an important thing to keep in mind that the core functionality of Prysm is never changed.
 So no changes have been made to variables already being used in the Prysm client.
 
 
