--- a/report/src/sections/07-conclusion.tex
+++ b/report/src/sections/07-conclusion.tex
@@ -3,7 +3,7 @@
 \section{Conclusion}\label{sec:conclusion}
 After looking into Ethereum and implementing the de-anonymization attack on validators, we have found that the attack is indeed possible.
 This reaffirms the findings of the~\gls{de-anon paper} and further highlights the security issues that the Ethereum network faces.
-The issue being that even with for the low cost of 0 ether staked, an attacker can gain access lots of information about the validators in the network, most importantly their IP addresses.
+The issue being that even with 0 ether staked, an attacker can gain access to lots of information about the validators in the network, most importantly their IP addresses.
 This information can then be used to perform attacks on the network, such as a~\gls{dos} attack on block proposers, and potentially lead to a loss of money for the honest actors within the Ethereum network.
 
 
