--- a/report/src/sections/07-conclusion.tex
+++ b/report/src/sections/07-conclusion.tex
@@ -9,5 +9,5 @@ This information can then be used to perform attacks on the network, such as a~\
 
 Our research has also shown that there is a difference in the makeup of the Holesky testnet compared to the mainnet.
 The results of the de-anonymization attack on the Holesky testnet show that there are more irregular validators on the testnet compared to the mainnet.
-It also shows that the amount of validators on an individual node is many times higher on the testnet compared to what you would find on the mainnet.
+It also shows that the amount of validators on an individual node is many times higher on the testnet compared to what you would find on the mainnet. This is likely linked with the low risks of the Holesky testnet.
 So even though the two networks are fundamentally the same, the ecosystem within them is different, as expected.
